<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zOT-bc-Qgf">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--My Canvas-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="Canvasly" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="130" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lEp-Hw-r8G">
                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DraftCell" id="VLj-uv-0fC" customClass="DraftCell" customModule="Canvasly" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="600" height="130"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VLj-uv-0fC" id="kZb-LO-uHE">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="130"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Share Me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Cc-MB-t4w">
                                                    <rect key="frame" x="28" y="28" width="584" height="24"/>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20k-yu-JuL">
                                                    <rect key="frame" x="28" y="67" width="544" height="41"/>
                                                    <string key="text">Welcome dude, today we have an important decision to share, 
we'll be doing some very cool content measurement so we don't
have the problem of being underrated here and there...</string>
                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                            <constraints>
                                                <constraint firstItem="0Cc-MB-t4w" firstAttribute="leading" secondItem="kZb-LO-uHE" secondAttribute="leadingMargin" constant="20" id="112-h3-9U5"/>
                                                <constraint firstItem="20k-yu-JuL" firstAttribute="top" secondItem="0Cc-MB-t4w" secondAttribute="bottom" constant="15" id="D0w-f9-qa7"/>
                                                <constraint firstItem="20k-yu-JuL" firstAttribute="leading" secondItem="kZb-LO-uHE" secondAttribute="leadingMargin" constant="20" id="J0S-4m-B5m"/>
                                                <constraint firstItem="20k-yu-JuL" firstAttribute="centerX" secondItem="kZb-LO-uHE" secondAttribute="centerX" id="O3x-Mf-l0n"/>
                                                <constraint firstItem="0Cc-MB-t4w" firstAttribute="top" secondItem="kZb-LO-uHE" secondAttribute="topMargin" constant="20" id="W2g-P5-RaN"/>
                                                <constraint firstItem="0Cc-MB-t4w" firstAttribute="trailing" secondItem="kZb-LO-uHE" secondAttribute="trailingMargin" constant="20" id="wkT-4o-LDC"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <connections>
                                            <outlet property="contentLabel" destination="20k-yu-JuL" id="L0k-h4-Yvk"/>
                                            <outlet property="titleLabel" destination="0Cc-MB-t4w" id="NOA-bY-0oT"/>
                                            <segue destination="lff-MK-HDp" kind="show" identifier="showCanvas" id="eje-Qw-xA0"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="r1U-oa-NgM"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Kgq-eR-f5B"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lEp-Hw-r8G" secondAttribute="bottom" id="Flg-KK-BqW"/>
                            <constraint firstItem="lEp-Hw-r8G" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="ory-ke-qcU"/>
                            <constraint firstItem="lEp-Hw-r8G" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="syf-nz-7bf"/>
                            <constraint firstAttribute="trailingMargin" secondItem="lEp-Hw-r8G" secondAttribute="trailing" constant="-20" id="wI8-uk-DbX"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="My Canvas" id="1Tt-ib-b8o">
                        <barButtonItem key="leftBarButtonItem" systemItem="organize" id="8yS-9p-3cG"/>
                        <barButtonItem key="rightBarButtonItem" title="Create" id="mPp-Gc-Wk6">
                            <connections>
                                <segue destination="lff-MK-HDp" kind="show" id="RKA-iz-ob0"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="tableView" destination="lEp-Hw-r8G" id="5ic-4j-OOz"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1285" y="-255"/>
        </scene>
        <!--Editor View Controller-->
        <scene sceneID="tGv-Am-3mI">
            <objects>
                <viewController id="lff-MK-HDp" customClass="EditorViewController" customModule="Canvasly" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="MtY-Sv-7tQ"/>
                        <viewControllerLayoutGuide type="bottom" id="F2P-bc-fO2"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Wh7-DQ-LCe">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter the title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5cf-cw-K8P">
                                <rect key="frame" x="20" y="84" width="560" height="33"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="5cf-cw-K8P" firstAttribute="leading" secondItem="Wh7-DQ-LCe" secondAttribute="leadingMargin" id="hxs-So-TZE"/>
                            <constraint firstItem="5cf-cw-K8P" firstAttribute="trailing" secondItem="Wh7-DQ-LCe" secondAttribute="trailingMargin" id="j2j-F6-bia"/>
                            <constraint firstItem="5cf-cw-K8P" firstAttribute="top" secondItem="MtY-Sv-7tQ" secondAttribute="bottom" constant="20" id="mvd-cx-API"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="titleField" destination="5cf-cw-K8P" id="zjQ-3e-x8Z"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lRf-0Y-e49" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2005" y="-255"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="eUI-nP-6vG">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zOT-bc-Qgf" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UKL-cw-R92">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="mek-uw-PnM"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="7bN-P7-LlO" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="507" y="-255"/>
        </scene>
    </scenes>
    <inferredMetricsTieBreakers>
        <segue reference="eje-Qw-xA0"/>
    </inferredMetricsTieBreakers>
</document>
